# Real-Time-Human-Postural-Assessment-Qualisys-

./: README.md
src/qualysis_data/: CMakeLists.txt  Operator_qualisys.ttt  package.xml
src/qualysis_data/files/tsv_files/: abducao_cotovelo.tsv  desvio_pulso.tsv  flexao_punho.tsv  flexao_tronco.tsv  flexao_upper_arm.tsv  pronacao_pulso.tsv  reflexao_cotovelo.tsv  static.tsv
src/qualysis_data/include/qualysis_data/: config.hpp  config.hpp.in  joint.h  mainwindow.h  plots_interface.h  qualisys_data_streaming.h  qualysis_move_data.h  ros_communication.h  rula.h  rulainterface.h  segment.h
src/qualysis_data/src/: joint.cpp  main.cpp  mainwindow.cpp  plots_interface.cpp  qualisys_data_streaming.cpp  qualysis_move_data.cpp  ros_communication.cpp  rula.cpp  rulainterface.cpp  segment.cpp
src/qualysis_data/ui/: mainwindow.ui  plots_interface.ui
src/vrep_plugin/: CMakeLists.txt
src/vrep_plugin/src/: ROS_server.cpp
