<?xml version="1.0"?>
<package format="2">
  <name>qualysis_data</name>
  <version>0.0.0</version>
  <description>The qualysis_data package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="pedro@todo.todo">pedro</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>qt5</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>vrep_common</build_depend>
	<build_export_depend>geometry_msgs</build_export_depend>
	<build_export_depend>roscpp</build_export_depend>
	<build_export_depend>tf</build_export_depend>
	<exec_depend>qt5</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>roscpp</exec_depend>
	<exec_depend>tf</exec_depend>
	<exec_depend>vrep_common</exec_depend>
	<export> </export>
</package>
